--- a/previews/PR209/tutorials/global_identifiability/index.html
+++ b/previews/PR209/tutorials/global_identifiability/index.html
@@ -29,22 +29,22 @@ w&#39;(t) = -b*w(t) + c*w(t)*x(t)*y(t) - c*w(t)*q*y(t)
 z&#39;(t) = c*w(t)*q*y(t) - h*z(t)
 y1(t) = w(t)
 y2(t) = z(t)</code><br/><code class="language-julia-repl hljs" style="display:block;">julia&gt; global_id = assess_identifiability(ode, 0.99)</code><code class="nohighlight hljs ansi" style="display:block;">[ Info: Assessing local identifiability
-[ Info: Local identifiability assessed in 4.992102749 seconds
+[ Info: Local identifiability assessed in 5.674715326 seconds
 [ Info: Assessing global identifiability
 [ Info: Note: the input model has nontrivial submodels. If the computation for the full model will be too heavy, you may want to try to first analyze one of the submodels. They can be produced using function `find_submodels`
 [ Info: Functions to check involve states
 [ Info: Computing IO-equations
-┌ Info: Computed in 18.289732192 seconds
+┌ Info: Computed in 20.782890272 seconds
 │   :ioeq_time = :ioeq_time
-└   ioeq_time = 18.289732192
+└   ioeq_time = 20.782890272
 [ Info: Computing Wronskians
-┌ Info: Computed in 2.629636056 seconds
+┌ Info: Computed in 3.020043522 seconds
 │   :wrnsk_time = :wrnsk_time
-└   wrnsk_time = 2.629636056
+└   wrnsk_time = 3.020043522
 [ Info: Dimensions of the Wronskians [18, 40]
-┌ Info: Ranks of the Wronskians computed in 0.018522019 seconds
+┌ Info: Ranks of the Wronskians computed in 0.021436961 seconds
 │   :rank_time = :rank_time
-└   rank_times = 0.018522019
+└   rank_times = 0.021436961
 [ Info: Simplifying identifiable functions
 ┌ Info: Computing parametric Groebner basis up to degrees (2, 2)
 │ Ordering: degrevlex
@@ -54,7 +54,7 @@ y2(t) = z(t)</code><br/><code class="language-julia-repl hljs" style="display:bl
 └ Assess correctness: false
 [ Info: Given 82 functions in Rational Field(b, c, h, lm, d, k, u, q, a, beta, x, y, v, w, z)[y1, y2, y3, y4, y5, y6, y7, y8, y9, y10, y11, y12, y13, y14, y15, t]
 [ Info: Specializing at 3 points to guess the shape of the basis..
-⌜ # Computing specializations..  	 Time: 0:00:07✓ # Computing specializations..  	 Time: 0:00:07
+⌜ # Computing specializations..  	 Time: 0:00:08✓ # Computing specializations..  	 Time: 0:00:08
 [ Info: Specializing at random points to guess the total degrees in parameters..
 [ Info: Success! 34 points used.
 ┌ Info: The total degrees in the coefficients
@@ -72,70 +72,11 @@ y2(t) = z(t)</code><br/><code class="language-julia-repl hljs" style="display:bl
 ┌ Info: Interpolating for degrees:
 └ Numerator: 3, Denominator: 2
 ⌜ # Computing specializations.. 	 Time: 0:00:00
-  Points:  2✓ # Computing specializations.. 	 Time: 0:00:01
+  Points:  2✓ # Computing specializations.. 	 Time: 0:00:02
 [ Info: Success! 14 points used.
 ┌ Info: Basis exponents summary:
 │     Maximal interpolated degrees are: 2 for num. and 2 for den.
 │     Maximal number of interpolated terms are: 1 for num. and 1 for den.
 └     
 [ Info: Recovering the coefficients..
-[ Info: Groebner basis computed in 11.945812309 seconds
-[ Info: Checking two-sided inclusion modulo a prime
-[ Info: Inclusion checked in 3.196630923 seconds. Result: true
-┌ Info: Computing parametric Groebner basis up to degrees (4, 4)
-│ Ordering: degrevlex
-│ Rational interpolator: VanDerHoevenLecerf
-│ Polynomial interpolator: PrimesBenOrTiwari
-│ Estimate degrees: true
-└ Assess correctness: false
-[ Info: Given 82 functions in Rational Field(b, c, h, lm, d, k, u, q, a, beta, x, y, v, w, z)[y1, y2, y3, y4, y5, y6, y7, y8, y9, y10, y11, y12, y13, y14, y15, t]
-[ Info: Specializing at 3 points to guess the shape of the basis..
-[ Info: Specializing at random points to guess the total degrees in parameters..
-[ Info: Success! 34 points used.
-┌ Info: The total degrees in the coefficients
-│   state.param_degrees =
-│    10-element Vector{Vector{Tuple{Int64, Int64}}}:
-│     [(0, 0), (0, 0)]
-│     [(0, 0), (1, 0)]
-│     [(0, 0), (1, 0)]
-│     [(0, 0), (1, 0)]
-│     ⋮
-│     [(0, 0), (2, 2)]
-│     [(0, 0), (3, 0)]
-└     [(0, 0), (4, 1)]
-[ Info: Interpolating the exponents in parameters..
-┌ Info: Interpolating for degrees:
-└ Numerator: 4, Denominator: 2
-[ Info: Success! 16 points used.
-┌ Info: Basis exponents summary:
-│     Maximal interpolated degrees are: 4 for num. and 2 for den.
-│     Maximal number of interpolated terms are: 1 for num. and 1 for den.
-└     
-[ Info: Recovering the coefficients..
-[ Info: Groebner basis computed in 0.039887215 seconds
-[ Info: Checking two-sided inclusion modulo a prime
-[ Info: Inclusion checked in 0.056810006 seconds. Result: true
-[ Info: The coefficients of the Groebner basis are presented by 11 rational functions
-┌ Info: Final cleaning and simplification of generators. 
-└ Out of 8 fractions 8 are syntactically unique.
-[ Info: Checking inclusion with probability 0.991
-[ Info: Inclusion checked in 2.892097214 seconds. Result: true
-[ Info: Out of 81 initial generators there are 8 indepdendent
-[ Info: The ranking of the new set of generators is 313
-[ Info: Global identifiability assessed in 48.997242254 seconds
-Dict{Any, Symbol} with 15 entries:
-  c    =&gt; :nonidentifiable
-  x    =&gt; :nonidentifiable
-  q    =&gt; :nonidentifiable
-  v    =&gt; :nonidentifiable
-  h    =&gt; :globally
-  beta =&gt; :nonidentifiable
-  y    =&gt; :nonidentifiable
-  u    =&gt; :globally
-  d    =&gt; :globally
-  lm   =&gt; :nonidentifiable
-  a    =&gt; :globally
-  k    =&gt; :nonidentifiable
-  w    =&gt; :globally
-  z    =&gt; :globally
-  b    =&gt; :globally</code></pre><p>We also note that it&#39;s usually inexpensive to obtain the result with higher probability of correctness. For example, taking <code>p=0.9999</code> in the system above will result only in a slight slowdown.</p><h2 id="Note-on-the-probability-of-correctness"><a class="docs-heading-anchor" href="#Note-on-the-probability-of-correctness">Note on the probability of correctness</a><a id="Note-on-the-probability-of-correctness-1"></a><a class="docs-heading-anchor-permalink" href="#Note-on-the-probability-of-correctness" title="Permalink"></a></h2><p>Currently, the probability of correctness does not include the probability of correctness of the modular reconstruction for Groebner bases. This probability is ensured by an additional check modulo a large prime, and can be neglected for practical purposes. However, in the future versions, we plan to eliminate this possible error.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. Wodarz, M. Nowak, <a href="https://doi.org/10.1073/pnas.96.25.14464"><em>Specific therapy regimes could lead to long-term immunological control of HIV</em></a>, PNAS December 7, 1999 96 (25) 14464-14469;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../local_identifiability/">« Local Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../identifiable_functions/">Globally Identifiable Functions »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 11 September 2023 08:49">Monday 11 September 2023</span>. Using Julia version 1.9.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+ERROR: UndefVarError: `_runtime_data` not defined</code></pre><p>We also note that it&#39;s usually inexpensive to obtain the result with higher probability of correctness. For example, taking <code>p=0.9999</code> in the system above will result only in a slight slowdown.</p><h2 id="Note-on-the-probability-of-correctness"><a class="docs-heading-anchor" href="#Note-on-the-probability-of-correctness">Note on the probability of correctness</a><a id="Note-on-the-probability-of-correctness-1"></a><a class="docs-heading-anchor-permalink" href="#Note-on-the-probability-of-correctness" title="Permalink"></a></h2><p>Currently, the probability of correctness does not include the probability of correctness of the modular reconstruction for Groebner bases. This probability is ensured by an additional check modulo a large prime, and can be neglected for practical purposes. However, in the future versions, we plan to eliminate this possible error.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. Wodarz, M. Nowak, <a href="https://doi.org/10.1073/pnas.96.25.14464"><em>Specific therapy regimes could lead to long-term immunological control of HIV</em></a>, PNAS December 7, 1999 96 (25) 14464-14469;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../local_identifiability/">« Local Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../identifiable_functions/">Globally Identifiable Functions »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 11 September 2023 12:31">Monday 11 September 2023</span>. Using Julia version 1.9.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
